ingress.yaml
# Traefik Dashboard ===============================================================================
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.mahdad.me`)
      services:
        - name: api@internal
          kind: TraefikService

# Longhorn ========================================================================================
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.mahdad.me`)
      priority: 10
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    certResolver: default

# ArgoCD ==========================================================================================
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.mahdad.me`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.mahdad.me`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: default

# Prometheus ======================================================================================
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.mahdad.me`)
      priority: 10
      services:
        - name: prometheus-server
          port: 80
  tls:
    certResolver: default

# Grafana =========================================================================================
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.mahdad.me`)
      priority: 10
      services:
        - name: grafana
          port: 80
  tls:
    certResolver: default
